MSSQL/external-db-backup/single-service/loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-local
  # namespace: demo
  labels:
    app: MyLocalApp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: MyLocalApp
  template:
    metadata:
      labels:
        app: MyLocalApp
    spec:
      containers:
        - name: agnhost
          image: registry.k8s.io/e2e-test-images/agnhost:2.40
          args:
            - netexec
            - --http-port=8080
            - --udp-port=8080
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: lb-service-local
  # namespace: demo
spec:
  # type: LoadBalancer
  # externalTrafficPolicy: Local
  selector:
    app: MyLocalApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---


# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: policy-local-1
#   namespace: demo
#   labels:
#     app: MyLocalApp-1
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: MyLocalApp-1
#   template:
#     metadata:
#       labels:
#         app: MyLocalApp-1
#     spec:
#       containers:
#         - name: agnhost
#           image: registry.k8s.io/e2e-test-images/agnhost:2.40
#           args:
#             - netexec
#             - --http-port=8080
#             - --udp-port=8080
#           ports:
#             - containerPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: lb-service-local-1
#   namespace: demo
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   selector:
#     app: MyLocalApp-1
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 8080
